--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ video {
 	text-align: center;
 }
 
-.spinner > div {
+.spinner div {
 	width: 18px;
 	height: 18px;
 	background-color: #333;
@@ -66,4 +66,51 @@ video {
 		-webkit-transform: scale(1.0);
 		transform: scale(1.0);
 	}
+}
+
+.sidebar {
+	background:#282828;
+	color:white;
+	width:35%;
+	margin:0;
+	padding:0;
+	position:fixed;
+	height:100%;
+	margin-left:-37%;
+	transition:margin 0.5s;
+	padding-left:1%;
+	padding-right:1%;
+}
+
+#streamContainer {
+	overflow-y:scroll;
+	height:90%;
+}
+
+#streamContainer .chip {
+	background:white;
+	color:black;
+	width:100%;
+	height:200px;
+	margin-bottom:2%;
+}
+
+#streamContainer .chip img {
+	float:left;
+	width:45%;
+	height:100%;
+	object-fit:fill;
+}
+
+#streamContainer .chip div {
+	float:left;
+	width:45%;
+	height:98%;
+	padding-top:1%;
+	padding-bottom:1%;
+}
+
+#streamContainer .chip h2, #streamContainer .chip p {
+	margin:0;
+	padding-left:5%;
 }
